--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <header class="nav">
     <div class="nav__inner">
       <a class="brand" href="index.html">Emmytech</a>
+      <button class="nav__toggle" id="navToggle" aria-label="Menu">☰</button>
       <nav class="nav__links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
