--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <a class="link" href="products.html">Browse all</a>
       </div>
       <div class="categories__grid">
-        <a class="cat" href="products.html?category=Laptops"><span>💻</span><p>Laptops</p></a>
-        <a class="cat" href="products.html?category=Mobile%20Phones"><span>📱</span><p>Mobile Phones</p></a>
-        <a class="cat" href="products.html?category=CCTV"><span>🎥</span><p>CCTV</p></a>
-        <a class="cat" href="products.html?category=Smart%20Locks"><span>🔐</span><p>Smart Locks</p></a>
-        <a class="cat" href="products.html?category=Solar%20Panels"><span>☀️</span><p>Solar Panels</p></a>
-        <a class="cat" href="products.html?category=Accessories"><span>🔌</span><p>Accessories</p></a>
-        <a class="cat" href="products.html?category=Power%20Stations"><span>⚡</span><p>Power Stations</p></a>
+        <a class="cat" href="products.html?category=Laptops"><img src="assets/img/IMG-20251202-WA0024.svg" alt="Laptops"><p>Laptops</p></a>
+        <a class="cat" href="products.html?category=Mobile%20Phones"><img src="assets/img/17pm.svg" alt="Mobile Phones"><p>Mobile Phones</p></a>
+        <a class="cat" href="products.html?category=CCTV"><img src="assets/img/cctv.svg" alt="CCTV"><p>CCTV</p></a>
+        <a class="cat" href="products.html?category=Smart%20Locks"><img src="assets/img/lock.svg" alt="Smart Locks"><p>Smart Locks</p></a>
+        <a class="cat" href="products.html?category=Solar%20Panels"><img src="assets/img/solar.svg" alt="Solar Panels"><p>Solar Panels</p></a>
+        <a class="cat" href="products.html?category=Accessories"><img src="assets/img/mouse.svg" alt="Accessories"><p>Accessories</p></a>
+        <a class="cat" href="products.html?category=Power%20Stations"><img src="assets/img/power.svg" alt="Power Stations"><p>Power Stations</p></a>
       </div>
     </section>
 
