--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
         <ul class="links">
           <li>Ikeja, Lagos</li>
           <li><a href="tel:+2347067797360">+234 706 779 7360</a></li>
-          <li><a href="mailto:info@emmytech.com">info@emmytech.com</a></li>
+          <li><a href="mailto:info@emmytech.com">emmybasil@gmail.com</a></li>
         </ul>
       </div>
       <div>
         <h4>Connect</h4>
         <div class="socials">
-          <a href="#" aria-label="Facebook">f</a>
-          <a href="#" aria-label="X">x</a>
-          <a href="#" aria-label="Instagram">ig</a>
-          <a href="#" aria-label="YouTube">yt</a>
+          <a href="https://web.facebook.com/emmabasil" aria-label="Facebook">f</a>
+          <a href="https://www.linkedin.com/in/onu-emmanuel-73a83613b/" aria-label="Linkedln ">Linkedln</a>
+          <a href="https://www.instagram.com/emmx_dude/" aria-label="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i>Ig</a>
+          <a href="https://www.youtube.com/@GemsDiary-t7j" aria-label="YouTube">YouTube</a>
         </div>
         <form class="footer__subscribe">
           <input type="email" placeholder="Email">
